config/base/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  namespace: hello-world
  annotations:
    seccomp.security.alpha.kubernetes.io/pod: "runtime/default"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
      # annotations:
      #   seccomp.security.alpha.kubernetes.io/pod: "runtime/default"
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
      containers:
        - name: nginx
          image: quay.io/avisied0/nginx-hello-world:1.0.0
          imagePullPolicy: Always
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            limits:
              cpu: 500m
              memory: "150Mi"
            requests:
              cpu: 250m
              memory: "100Mi"
          volumeMounts:
            - mountPath: /etc/nginx/conf.d
              name: config
            - mountPath: /var/cache/nginx
              name: cache
            - mountPath: /var/run
              name: run
      volumes:
        - name: config
          emptyDir: {}
        - name: cache
          emptyDir: {}
        - name: run
          emptyDir: {}
