config/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: hello-world
spec:
  selector:
    app: nginx
  ports:
    - name: http
      protocol: TCP
      targetPort: 8080
      port: 8080
