config/base/route.yaml
# https://docs.openshift.com/container-platform/4.6/networking/routes/route-configuration.html#nw-route-specific-annotations_route-configuration
---
apiVersion: v1
kind: Route
metadata:
  name: hello-world
  namespace: $(NAMESPACE)
  annotations:
    haproxy.router.openshift.io/hsts_header: max-age=31536000;includeSubDomains;preload
    haproxy.router.openshift.io/balance: roundrobin
spec:
  host: www.example.com
  to:
    kind: Service
    name: hello-world
